@@ -93,9 +93,10 @@ import org.checkerframework.javacutil.TypeSystemError;
 import org.checkerframework.javacutil.UserError;
 import org.plumelib.util.ArrayMap;
 import org.plumelib.util.ArraySet;
+import org.plumelib.util.IPair;
 import org.plumelib.util.MapsP;
-import org.plumelib.util.SystemPlume;
-import org.plumelib.util.UtilPlume;
+import org.plumelib.util.SystemP;
+import org.plumelib.util.UtilP;
 
 /**
  * An abstract annotation processor designed for implementing a source-file checker as an annotation
@@ -133,7 +134,6 @@ import org.plumelib.util.UtilPlume;
   "onlyDefs",
   "skipFiles",
   "onlyFiles",
-  "skipDirs", // Obsolete as of 2024-03-15, replaced by "skipFiles".
 
   // Unsoundly assume all methods have no side effects, are deterministic, or both.
   "assumeSideEffectFree",
@@ -217,7 +217,7 @@ import org.plumelib.util.UtilPlume;
   "resolveReflection",
 
   // Whether to use whole-program inference. Takes an argument to specify the output format:
-  // "-Ainfer=stubs" or "-Ainfer=jaifs".
+  // "-Ainfer=ajava" or "-Ainfer=stubs" or "-Ainfer=jaifs".
   "infer",
 
   // The directory into which to write whole-program inference results.
@@ -226,6 +226,9 @@ import org.plumelib.util.UtilPlume;
   // Whether to output a copy of each file for which annotations were inferred, formatted
   // as an ajava file. Can only be used with -Ainfer=ajava
   "inferOutputOriginal",
+
+  // Whether to show diagnostics about failed inference steps during whole-program inference.
+  "showWpiFailedInferences",
 
   // With each warning, in addition to the concrete error key,
   // output the SuppressWarnings strings that can be used to
@@ -249,7 +252,8 @@ import org.plumelib.util.UtilPlume;
   "requirePrefixInWarningSuppressions",
 
   // Print a checker key as a prefix to each typechecking diagnostic.
-  // org.checkerframework.framework.source.SourceChecker.suppressWarningsString(java.lang.String)
+  // org.checkerframework.framework.source.SourceChecker.suppressWarningsString(java.util.Set,
+  // java.lang.String)
   "showPrefixInWarningMessages",
 
   // Ignore annotations in bytecode that have invalid annotation locations.
@@ -447,14 +451,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
   // TODO A checker should export itself through a separate interface, and maybe have an interface
   // for all the methods for which it's safe to override.
 
-  /** The message key that will suppress all warnings (it matches any message key). */
-  public static final String SUPPRESS_ALL_MESSAGE_KEY = "all";
-
   /** The SuppressWarnings prefix that will suppress warnings for all checkers. */
   public static final String SUPPRESS_ALL_PREFIX = "allcheckers";
-
-  /** The message key emitted when an unused warning suppression is found. */
-  public static final @CompilerMessageKey String UNNEEDED_SUPPRESSION_KEY = "unneeded.suppression";
 
   /** File name of the localized messages. */
   protected static final String MSGS_FILE = "messages.properties";
@@ -628,6 +626,26 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
   /** List of upstream checker names. Includes the current checker. */
   protected @MonotonicNonNull List<@FullyQualifiedName String> upstreamCheckerNames;
 
+  /**
+   * The diagnostics that {@link #reportOnce} has reported, as a (tree, message) pair for each. All
+   * the trees are within {@link #reportOnceCompilationUnit}. Only the ultimate parent checker's set
+   * is consulted, so all the checkers of a compound checker share one set.
+   *
+   * <p>The whole message, rather than just its key, is part of the pair because one tree may be the
+   * source of several distinct messages that have the same key. For example, an enhanced for loop
+   * is desugared into calls to {@code iterator()}, {@code hasNext()}, and {@code next()}, each of
+   * which is reported at the {@code for} statement. The message is represented as its string
+   * rendering, because two checkers of a compound checker produce equal text from arguments that
+   * are not {@code equals()} to one another.
+   */
+  private final Set<IPair<Tree, String>> reportOnceReported = new HashSet<>();
+
+  /**
+   * The compilation unit that contains the trees in {@link #reportOnceReported}, or null if that
+   * set is empty.
+   */
+  private @Nullable CompilationUnitTree reportOnceCompilationUnit = null;
+
   /** True if the -Afilenames command-line argument was passed. */
   private boolean printFilenames;
 
@@ -678,7 +696,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
   public final synchronized void init(ProcessingEnvironment env) {
     ProcessingEnvironment unwrappedEnv = unwrapProcessingEnvironment(env);
     super.init(unwrappedEnv);
-    // Sets processing enviroment and other related fields.
+    // Sets processing environment and other related fields.
     setProcessingEnvironment(unwrappedEnv);
 
     if (!hasOption("warnUnneededSuppressionsExceptions")) {
@@ -690,8 +708,12 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
         throw new UserError("Must supply an argument to -AwarnUnneededSuppressionsExceptions");
       }
       try {
-        warnUnneededSuppressionsExceptions =
+        @SuppressWarnings(
+            "regex:argument") // user-provided string; validity checked by PatternSyntaxException
+        // catch
+        Pattern warnUnneededSuppressionsExceptionsPattern =
             Pattern.compile(warnUnneededSuppressionsExceptionsString);
+        warnUnneededSuppressionsExceptions = warnUnneededSuppressionsExceptionsPattern;
       } catch (PatternSyntaxException e) {
         throw new UserError(
             "Argument to -AwarnUnneededSuppressionsExceptions is not a regular expression: "
@@ -933,6 +955,16 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     return getPattern(patternName, options, ".");
   }
 
+  /**
+   * Returns a pattern from user-supplied options.
+   *
+   * @param patternName the name of the pattern to look up in the options
+   * @param options the options supplied by the user
+   * @param defaultPattern the pattern to return if the user didn't supply a value
+   * @return the user-supplied pattern for {@code patternName}
+   */
+  @SuppressWarnings(
+      "regex:argument") // pattern string comes from user options; validated by try-catch
   private Pattern getPattern(
       String patternName, Map<String, String> options, String defaultPattern) {
     String pattern;
@@ -1226,7 +1258,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
       immediateSubcheckers = instantiateSubcheckers(checkerMap);
 
-      subcheckers = Collections.unmodifiableList(new ArrayList<>(checkerMap.values()));
+      subcheckers = List.copyOf(checkerMap.values());
     }
 
     return subcheckers;
@@ -1298,7 +1330,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     }
 
     if (!warnedAboutGarbageCollection) {
-      String gcUsageMessage = SystemPlume.gcUsageMessage(.25, 60);
+      String gcUsageMessage = SystemP.gcUsageMessage(.25, 60);
       if (gcUsageMessage != null) {
         boolean noWarnMemoryConstraints =
             (processingEnv != null
@@ -1418,6 +1450,56 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
   }
 
   /**
+   * Reports a diagnostic message at the leaf of the given path, unless this checker or another
+   * checker of the same compound checker has already handled that message at that tree. The first
+   * checker to reach the tree handles the message: it reports the message, or discards it if the
+   * message is suppressed there.
+   *
+   * <p>Because the message does not depend on which checker computes it, a
+   * {@code @SuppressWarnings} whose prefix names any checker of the compound checker suppresses it.
+   * In particular, the prefix of the checker that the user ran does, even though some subchecker
+   * may be the one that computed the message.
+   *
+   * <p>Use this for a diagnostic that does not depend on which checker computes it, but that every
+   * checker of a compound checker computes independently -- such as one that is computed during
+   * dataflow analysis. {@link #printOrStoreMessage} cannot discard such a duplicate, because it
+   * distinguishes messages by the checker that issued them.
+   *
+   * @param path the path whose leaf is the tree at which to report the message
+   * @param d the diagnostic message
+   */
+  @SuppressWarnings("interning:not.interned") // each compilation unit is a distinct tree
+  public void reportOnce(TreePath path, DiagMessage d) {
+    SourceChecker ultimateParent = this;
+    while (ultimateParent.parentChecker != null) {
+      ultimateParent = ultimateParent.parentChecker;
+    }
+    // Retaining a tree retains its whole compilation unit, so retain only the trees of the
+    // compilation unit that is being processed.  A compilation unit is never processed again after
+    // the next one has been processed, so discarding the other compilation units' trees does not
+    // cause a duplicate message.
+    CompilationUnitTree root = path.getCompilationUnit();
+    if (root != ultimateParent.reportOnceCompilationUnit) {
+      ultimateParent.reportOnceReported.clear();
+      ultimateParent.reportOnceCompilationUnit = root;
+    }
+    if (!ultimateParent.reportOnceReported.add(IPair.of(path.getLeaf(), d.toString()))) {
+      return;
+    }
+    // The message does not depend on which checker computed it, so honor a `@SuppressWarnings`
+    // that names any checker of the compound checker, not just the one that computed the message.
+    Set<String> prefixes = new HashSet<>(ultimateParent.getSuppressWarningsPrefixesOfSubcheckers());
+    String messageKey = d.getMessageKey();
+    if (shouldSuppress(prefixes, getSuppressWarningsStringsFromOption(), messageKey)
+        || shouldSuppressWarnings(path, prefixes, messageKey)) {
+      return;
+    }
+    // Use the given path rather than `report(Tree, DiagMessage)`, which would recompute the path
+    // (and would compute the wrong one if the tree is not in the current compilation unit).
+    reportUnsuppressed(path.getLeaf(), root, prefixes, d.getKind(), messageKey, d.getArgs());
+  }
+
+  /**
    * Reports a diagnostic message. By default, it prints it to the screen via the compiler's
    * internal messager; however, it might also store it for later output.
    *
@@ -1426,17 +1508,38 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @param messageKey the message key
    * @param args arguments for interpolation in the string corresponding to the given message key
    */
+  private void report(
+      Object source, Diagnostic.Kind kind, @CompilerMessageKey String messageKey, Object... args) {
+    if (shouldSuppressWarnings(source, messageKey)) {
+      return;
+    }
+    reportUnsuppressed(source, currentRoot, getSuppressWarningsPrefixes(), kind, messageKey, args);
+  }
+
+  /**
+   * Formats a diagnostic message and issues it, without testing whether it is suppressed.
+   *
+   * @param source the source position information; an Element or a Tree
+   * @param root the compilation unit that contains {@code source}; used only if {@code source} is a
+   *     Tree
+   * @param prefixes the {@code @SuppressWarnings} prefixes that suppress the message; they are
+   *     printed by {@code -AshowSuppressWarningsStrings}
+   * @param kind the type of message
+   * @param messageKey the message key
+   * @param args arguments for interpolation in the string corresponding to the given message key
+   */
   // Not a format method.  However, messageKey should be either a format string for `args`, or a
   // property key that maps to a format string for `args`.
   // @FormatMethod
   @SuppressWarnings("formatter:format.string") // arg is a format string or a property key
-  private void report(
-      Object source, Diagnostic.Kind kind, @CompilerMessageKey String messageKey, Object... args) {
+  private void reportUnsuppressed(
+      Object source,
+      CompilationUnitTree root,
+      Set<String> prefixes,
+      Diagnostic.Kind kind,
+      @CompilerMessageKey String messageKey,
+      Object... args) {
     assert messagesProperties != null : "null messagesProperties";
-
-    if (shouldSuppressWarnings(source, messageKey)) {
-      return;
-    }
 
     if (args != null) {
       for (int i = 0; i < args.length; ++i) {
@@ -1463,7 +1566,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       prefix = detailedMsgTextPrefix(source, defaultFormat, args);
       fmtString = fullMessageOf(messageKey, defaultFormat);
     } else {
-      prefix = "[" + suppressWarningsString(messageKey) + "] ";
+      prefix = "[" + suppressWarningsString(prefixes, messageKey) + "] ";
       fmtString = fullMessageOf(messageKey, defaultFormat);
     }
     String messageText;
@@ -1487,10 +1590,10 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       messageText = messageText.replace(System.lineSeparator(), " / ");
     }
 
-    if (source instanceof Element) {
-      messager.printMessage(kind, messageText, (Element) source);
-    } else if (source instanceof Tree) {
-      printOrStoreMessage(kind, messageText, (Tree) source, currentRoot);
+    if (source instanceof Element elem) {
+      messager.printMessage(kind, messageText, elem);
+    } else if (source instanceof Tree sourceTree) {
+      printOrStoreMessage(kind, messageText, sourceTree, root);
     } else {
       throw new BugInCF("invalid position source of class " + source.getClass() + ": " + source);
     }
@@ -1522,7 +1625,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @param msg the message text
    * @see SourceChecker#report(Object, DiagMessage)
    */
-  public void message(javax.tools.Diagnostic.Kind kind, String msg) {
+  public void message(Diagnostic.Kind kind, String msg) {
     if (messager == null) {
       // If this method is called before initChecker() sets the field
       messager = processingEnv.getMessager();
@@ -1573,7 +1676,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @param root the compilation unit
    */
   protected void printOrStoreMessage(
-      javax.tools.Diagnostic.Kind kind, String message, Tree source, CompilationUnitTree root) {
+      Diagnostic.Kind kind, String message, Tree source, CompilationUnitTree root) {
     assert this.currentRoot == root;
     StackTraceElement[] trace = Thread.currentThread().getStackTrace();
     if (messageStore == null) {
@@ -1598,7 +1701,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *     dumpOnErrors option is enabled.
    */
   protected void printOrStoreMessage(
-      javax.tools.Diagnostic.Kind kind,
+      Diagnostic.Kind kind,
       String message,
       Tree source,
       CompilationUnitTree root,
@@ -1666,8 +1769,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    */
   protected Object processErrorMessageArg(Object arg) {
     // Check to see if the argument itself is a property to be expanded
-    if (arg instanceof String) {
-      return messagesProperties.getProperty((String) arg, (String) arg);
+    if (arg instanceof String s) {
+      return messagesProperties.getProperty(s, s);
     } else {
       return arg;
     }
@@ -1727,11 +1830,12 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *   <li>Otherwise, it is just {@code msg}.
    * </ul>
    *
+   * @param allPrefixes the {@code @SuppressWarnings} prefixes that suppress the warning/error
    * @param messageKey the simple, checker-specific error message key
    * @return the most specific SuppressWarnings string for the warning/error being printed
    */
-  private String suppressWarningsString(String messageKey) {
-    Collection<String> prefixes = this.getSuppressWarningsPrefixes();
+  private String suppressWarningsString(Set<String> allPrefixes, String messageKey) {
+    Collection<String> prefixes = new TreeSet<>(allPrefixes);
     prefixes.remove(SUPPRESS_ALL_PREFIX);
     if (showSuppressWarningsStrings) {
       List<String> list = new ArrayList<>(prefixes);
@@ -1763,10 +1867,10 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @return the tree associated with the given source object, or null if none
    */
   private @Nullable Tree sourceToTree(@Nullable Object source) {
-    if (source instanceof Element) {
-      return trees.getTree((Element) source);
-    } else if (source instanceof Tree) {
-      return (Tree) source;
+    if (source instanceof Element elem) {
+      return trees.getTree(elem);
+    } else if (source instanceof Tree sourceTree) {
+      return sourceTree;
     } else if (source == null) {
       return null;
     } else {
@@ -2129,34 +2233,36 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
       String[] split = key.split(OPTION_SEPARATOR);
 
-      splitlengthswitch:
       switch (split.length) {
-        case 1:
+        case 1 -> {
           // No separator, option always active.
           activeOpts.put(key, value);
-          break;
-        case 2:
+        }
+        case 2 -> {
           Class<?> clazz = this.getClass();
-
+          boolean found = false;
           do {
             if (clazz.getCanonicalName().equals(split[0])
                 || clazz.getSimpleName().equals(split[0])) {
               // Valid class-option pair.
               activeOpts.put(split[1], value);
-              break splitlengthswitch;
+              found = true;
+              break;
             }
-
             clazz = clazz.getSuperclass();
           } while (clazz != null
               && !clazz.getName().equals(AbstractTypeProcessor.class.getCanonicalName()));
-          // Didn't find a matching class. Option might be for another processor. Add
-          // option anyways. javac will warn if no processor supports the option.
-          activeOpts.put(key, value);
-          break;
-        default:
+          if (!found) {
+            // Didn't find a matching class. Option might be for another processor. Add
+            // option anyways. javac will warn if no processor supports the option.
+            activeOpts.put(key, value);
+          }
+        }
+        default -> {
           // Too many separators. Option might be for another processor. Add option
           // anyways. javac will warn if no processor supports the option.
           activeOpts.put(key, value);
+        }
       }
     }
     return activeOpts;
@@ -2454,31 +2560,28 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     this.elementsWithSuppressedWarnings.clear();
 
     Set<String> prefixes = new HashSet<>(getSuppressWarningsPrefixes());
-    Set<String> errorKeys = new HashSet<>(messagesProperties.stringPropertyNames());
     for (SourceChecker subChecker : subcheckers) {
       allElementsWithSuppressedWarnings.addAll(subChecker.elementsWithSuppressedWarnings);
       subChecker.elementsWithSuppressedWarnings.clear();
       prefixes.addAll(subChecker.getSuppressWarningsPrefixes());
-      errorKeys.addAll(subChecker.messagesProperties.stringPropertyNames());
       subChecker.getVisitor().treesWithSuppressWarnings.clear();
     }
-    warnUnneededSuppressions(allElementsWithSuppressedWarnings, prefixes, errorKeys);
+    warnUnneededSuppressions(allElementsWithSuppressedWarnings, prefixes);
 
     getVisitor().treesWithSuppressWarnings.clear();
   }
 
   /**
-   * Issues a warning about any {@code @SuppressWarnings} string that didn't suppress a warning, but
-   * starts with one of the given prefixes (checker names). Does nothing if the string doesn't start
-   * with a checker name.
+   * Issues a warning about any {@code @SuppressWarnings} string that didn't suppress a warning. Has
+   * an effect only if the string is one of the given prefixes (checker names) or starts with one
+   * followed by a colon.
    *
    * @param elementsSuppress elements with a {@code @SuppressWarnings} that actually suppressed a
    *     warning
-   * @param prefixes the SuppressWarnings prefixes that suppress all warnings from this checker
-   * @param allErrorKeys all error keys that can be issued by this checker
+   * @param checkerPrefixes the SuppressWarnings prefixes associated with this checker
    */
   protected void warnUnneededSuppressions(
-      Set<Element> elementsSuppress, Set<String> prefixes, Set<String> allErrorKeys) {
+      Set<Element> elementsSuppress, Set<String> checkerPrefixes) {
     for (Tree tree : getVisitor().treesWithSuppressWarnings) {
       Element elt = TreeUtils.elementFromTree(tree);
       // TODO: This test is too coarse.  The fact that this @SuppressWarnings suppressed
@@ -2486,7 +2589,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       if (elementsSuppress.contains(elt)) {
         continue;
       }
-      // tree has a @SuppressWarnings annotation that didn't suppress any warnings.
+      // `tree` has a @SuppressWarnings annotation that didn't suppress any warnings.
       SuppressWarnings suppressAnno = elt.getAnnotation(SuppressWarnings.class);
       String[] suppressWarningsStrings = suppressAnno.value();
       for (String suppressWarningsString : suppressWarningsStrings) {
@@ -2494,12 +2597,29 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
             && warnUnneededSuppressionsExceptions.matcher(suppressWarningsString).find(0)) {
           continue;
         }
-        for (String prefix : prefixes) {
-          if (suppressWarningsString.equals(prefix)
-              || (suppressWarningsString.startsWith(prefix + ":")
-                  && !suppressWarningsString.equals(prefix + ":" + UNNEEDED_SUPPRESSION_KEY))) {
-            reportUnneededSuppression(tree, suppressWarningsString);
-            break; // Don't report the same warning string more than once.
+        if (suppressWarningsString.equals("allcheckers")) {
+          // Do nothing.
+        } else if (checkerPrefixes.contains(suppressWarningsString)) {
+          reportUnneededSuppression(tree, suppressWarningsString);
+        } else {
+          int colonPos = suppressWarningsString.indexOf(":");
+          if (colonPos != -1) {
+            String warningPrefix = suppressWarningsString.substring(0, colonPos);
+            if (!warningPrefix.equals("allcheckers") && checkerPrefixes.contains(warningPrefix)) {
+              // Test whether the error key is "unneeded.suppression", without creating a String.
+              boolean isUnneededSuppression =
+                  suppressWarningsString.length() == colonPos + 1 + "unneeded.suppression".length()
+                      && suppressWarningsString.endsWith("unneeded.suppression");
+              if (!isUnneededSuppression) {
+                reportUnneededSuppression(tree, suppressWarningsString);
+              }
+            }
+          } else {
+            // The annotation might be of the form `@SuppressWarnings("generic.argument")`.
+            // However, per the manual, "This only warns about @SuppressWarnings strings that
+            // contain a checker name".  Thus, `@SuppressWarnings("generic.argument")` is treated
+            // the same as `@SuppressWarnings("allcheckers:generic.argument")` in that no warning is
+            // ever issued about it.
           }
         }
       }
@@ -2517,7 +2637,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     report(
         swTree,
         Diagnostic.Kind.MANDATORY_WARNING,
-        SourceChecker.UNNEEDED_SUPPRESSION_KEY,
+        "unneeded.suppression",
         "\"" + suppressWarningsString + "\"",
         getClass().getSimpleName());
   }
@@ -2536,8 +2656,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     List<? extends AnnotationTree> annotations;
     if (TreeUtils.isClassTree(tree)) {
       annotations = ((ClassTree) tree).getModifiers().getAnnotations();
-    } else if (tree instanceof MethodTree) {
-      annotations = ((MethodTree) tree).getModifiers().getAnnotations();
+    } else if (tree instanceof MethodTree mt) {
+      annotations = mt.getModifiers().getAnnotations();
     } else {
       annotations = ((VariableTree) tree).getModifiers().getAnnotations();
     }
@@ -2563,10 +2683,10 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @see #shouldSuppressWarnings(Tree, String)
    */
   private boolean shouldSuppressWarnings(@Nullable Object src, String errKey) {
-    if (src instanceof Element) {
-      return shouldSuppressWarnings((Element) src, errKey);
-    } else if (src instanceof Tree) {
-      return shouldSuppressWarnings((Tree) src, errKey);
+    if (src instanceof Element elem) {
+      return shouldSuppressWarnings(elem, errKey);
+    } else if (src instanceof Tree srcTree) {
+      return shouldSuppressWarnings(srcTree, errKey);
     } else if (src == null) {
       return false;
     } else {
@@ -2587,7 +2707,6 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *     otherwise
    */
   public boolean shouldSuppressWarnings(Tree tree, String errKey) {
-
     Collection<String> prefixes = getSuppressWarningsPrefixes();
     if (prefixes.isEmpty() || (prefixes.contains(SUPPRESS_ALL_PREFIX) && prefixes.size() == 1)) {
       throw new BugInCF(
@@ -2620,6 +2739,23 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *     otherwise
    */
   public boolean shouldSuppressWarnings(@Nullable TreePath path, String errKey) {
+    return shouldSuppressWarnings(path, getSuppressWarningsPrefixes(), errKey);
+  }
+
+  /**
+   * Returns true if all the warnings pertaining to a given tree path should be suppressed, where
+   * the given prefixes -- rather than {@link #getSuppressWarningsPrefixes} -- are the checker names
+   * that suppress a warning.
+   *
+   * @param path the TreePath that might be a source of, or related to, a warning
+   * @param prefixes the {@code @SuppressWarnings} prefixes that suppress the warning
+   * @param errKey the error key the checker is emitting
+   * @return true if no warning should be emitted for the given path because it is contained by a
+   *     declaration with an appropriately-valued {@code @SuppressWarnings} annotation; false
+   *     otherwise
+   */
+  private boolean shouldSuppressWarnings(
+      @Nullable TreePath path, Set<String> prefixes, String errKey) {
     if (path == null) {
       return false;
     }
@@ -2631,14 +2767,14 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
       Tree decl = declPath.getLeaf();
 
-      if (decl instanceof VariableTree) {
-        Element elt = TreeUtils.elementFromDeclaration((VariableTree) decl);
-        if (shouldSuppressWarnings(elt, errKey)) {
+      if (decl instanceof VariableTree vt) {
+        Element elt = TreeUtils.elementFromDeclaration(vt);
+        if (shouldSuppressWarnings(elt, prefixes, errKey)) {
           return true;
         }
-      } else if (decl instanceof MethodTree) {
-        Element elt = TreeUtils.elementFromDeclaration((MethodTree) decl);
-        if (shouldSuppressWarnings(elt, errKey)) {
+      } else if (decl instanceof MethodTree mt) {
+        Element elt = TreeUtils.elementFromDeclaration(mt);
+        if (shouldSuppressWarnings(elt, prefixes, errKey)) {
           return true;
         }
 
@@ -2650,7 +2786,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       } else if (TreeUtils.classTreeKinds().contains(decl.getKind())) {
         // A class tree
         Element elt = TreeUtils.elementFromDeclaration((ClassTree) decl);
-        if (shouldSuppressWarnings(elt, errKey)) {
+        if (shouldSuppressWarnings(elt, prefixes, errKey)) {
           return true;
         }
 
@@ -2716,8 +2852,25 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *     otherwise
    */
   public boolean shouldSuppressWarnings(@Nullable Element elt, String errKey) {
+    return shouldSuppressWarnings(elt, getSuppressWarningsPrefixes(), errKey);
+  }
 
-    if (shouldSuppress(getSuppressWarningsStringsFromOption(), errKey)) {
+  /**
+   * Returns true if all the warnings pertaining to a given element should be suppressed, where the
+   * given prefixes -- rather than {@link #getSuppressWarningsPrefixes} -- are the checker names
+   * that suppress a warning.
+   *
+   * @param elt the Element that might be a source of, or related to, a warning
+   * @param prefixes the {@code @SuppressWarnings} prefixes that suppress the warning
+   * @param errKey the error key the checker is emitting
+   * @return true if no warning should be emitted for the given Element because it is contained by a
+   *     declaration with an appropriately-valued {@code @SuppressWarnings} annotation; false
+   *     otherwise
+   */
+  private boolean shouldSuppressWarnings(
+      @Nullable Element elt, Set<String> prefixes, String errKey) {
+
+    if (shouldSuppress(prefixes, getSuppressWarningsStringsFromOption(), errKey)) {
       return true;
     }
 
@@ -2725,7 +2878,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       SuppressWarnings suppressWarningsAnno = currElt.getAnnotation(SuppressWarnings.class);
       if (suppressWarningsAnno != null) {
         String[] suppressWarningsStrings = suppressWarningsAnno.value();
-        if (shouldSuppress(suppressWarningsStrings, errKey)) {
+        if (shouldSuppress(prefixes, suppressWarningsStrings, errKey)) {
           if (warnUnneededSuppressions) {
             elementsWithSuppressedWarnings.add(currElt);
           }
@@ -2759,8 +2912,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *       with a message key that contains "generic.argument".
    * </ol>
    *
-   * {@code "allcheckers"} is a prefix that suppresses a warning from any checker. {@code "all"} is
-   * a partial-message-key that suppresses a warning with any message key.
+   * {@code "allcheckers"} is a prefix/checkername that suppresses a warning from any checker.
+   * {@code "all"} is a partial-message-key that suppresses a warning with any message key.
    *
    * <p>If the {@code -ArequirePrefixInWarningSuppressions} command-line argument was supplied, then
    * {@code "partial-message-key"} has no effect; {@code "prefix"} and {@code
@@ -2795,43 +2948,44 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
     for (String currentSuppressWarningsInEffect : suppressWarningsInEffect) {
       int colonPos = currentSuppressWarningsInEffect.indexOf(':');
-      String messageKeyInSuppressWarningsString;
+      String messageKeyInEffect;
       if (colonPos == -1) {
-        // The SuppressWarnings string has no colon, so it is not of the form
+        // `currentSuppressWarningsInEffect` has no colon, so it is not of the form
         // prefix:partial-message-key.
         if (prefixes.contains(currentSuppressWarningsInEffect)) {
           // The value in the @SuppressWarnings is exactly a prefix.
           // Suppress the warning unless its message key is "unneeded.suppression".
-          boolean result = !currentSuppressWarningsInEffect.equals(UNNEEDED_SUPPRESSION_KEY);
+          boolean result = !messageKey.equals("unneeded.suppression");
           return result;
         } else if (requirePrefixInWarningSuppressions) {
           // A prefix is required, but this SuppressWarnings string does not have a
-          // prefix; check the next SuppressWarnings string.
+          // prefix.
           continue;
-        } else if (currentSuppressWarningsInEffect.equals(SUPPRESS_ALL_MESSAGE_KEY)) {
-          // Prefixes aren't required and the SuppressWarnings string is "all".
+        } else if (currentSuppressWarningsInEffect.equals("all")
+            || currentSuppressWarningsInEffect.equals("allcheckers")) {
+          // Prefixes aren't required and the whole SuppressWarnings string is
+          // the messagekey "all" or the checkername "allcheckers".
           // Suppress the warning unless its message key is "unneeded.suppression".
-          boolean result = !currentSuppressWarningsInEffect.equals(UNNEEDED_SUPPRESSION_KEY);
+          boolean result = !messageKey.equals("unneeded.suppression");
           return result;
         }
-        // The currentSuppressWarningsInEffect is not a prefix or a prefix:message-key, so
+        // The currentSuppressWarningsInEffect is not a checker name, so
         // it might be a message key.
-        messageKeyInSuppressWarningsString = currentSuppressWarningsInEffect;
+        messageKeyInEffect = currentSuppressWarningsInEffect;
       } else {
         // The SuppressWarnings string has a colon; that is, it has a prefix.
         String currentSuppressWarningsPrefix =
             currentSuppressWarningsInEffect.substring(0, colonPos);
         if (!prefixes.contains(currentSuppressWarningsPrefix)) {
-          // The prefix of this SuppressWarnings string is a not a prefix supported by
-          // this checker. Proceed to the next SuppressWarnings string.
+          // The prefix of this SuppressWarnings string is not a prefix supported
+          // by this checker. Proceed to the next SuppressWarnings string.
           continue;
         }
-        messageKeyInSuppressWarningsString =
-            currentSuppressWarningsInEffect.substring(colonPos + 1);
+        messageKeyInEffect = currentSuppressWarningsInEffect.substring(colonPos + 1);
       }
       // Check if the message key in the warning suppression is part of the message key that
-      // the checker is emiting.
-      if (messageKeyMatches(messageKey, messageKeyInSuppressWarningsString)) {
+      // the checker is emitting.
+      if (messageKeyMatches(messageKey, messageKeyInEffect)) {
         return true;
       }
     }
@@ -2846,16 +3000,15 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    *
    * @param messageKey the message key of the error that is being emitted, without any "checker:"
    *     prefix
-   * @param messageKeyInSuppressWarningsString the message key in a {@code @SuppressWarnings}
-   *     annotation
+   * @param messageKeyInEffect the message key in a {@code @SuppressWarnings} annotation that is
+   *     currently in effect
    * @return true if the arguments match
    */
-  protected boolean messageKeyMatches(
-      String messageKey, String messageKeyInSuppressWarningsString) {
-    return messageKey.equals(messageKeyInSuppressWarningsString)
-        || messageKey.startsWith(messageKeyInSuppressWarningsString + ".")
-        || messageKey.endsWith("." + messageKeyInSuppressWarningsString)
-        || messageKey.contains("." + messageKeyInSuppressWarningsString + ".");
+  protected boolean messageKeyMatches(String messageKey, String messageKeyInEffect) {
+    return messageKey.equals(messageKeyInEffect)
+        || messageKey.startsWith(messageKeyInEffect + ".")
+        || messageKey.endsWith("." + messageKeyInEffect)
+        || messageKey.contains("." + messageKeyInEffect + ".");
   }
 
   /**
@@ -3177,8 +3330,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
         }
 
         DiagnosticPosition pos = null;
-        if ((ce instanceof BugInCF) && ((BugInCF) ce).getLocation() != null) {
-          pos = (DiagnosticPosition) ((BugInCF) ce).getLocation();
+        if (ce instanceof BugInCF bugInCF && bugInCF.getLocation() != null) {
+          pos = (DiagnosticPosition) bugInCF.getLocation();
         } else if (this.visitor != null) {
           pos = (DiagnosticPosition) this.visitor.lastVisited;
         }
@@ -3194,12 +3347,11 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
         Throwable forStackTrace = ce.getCause() != null ? ce.getCause() : ce;
         if (forStackTrace != null) {
-          msg.add(
-              "Exception: " + forStackTrace + "; " + UtilPlume.stackTraceToString(forStackTrace));
+          msg.add("Exception: " + forStackTrace + "; " + UtilP.stackTraceToString(forStackTrace));
           boolean printClasspath = forStackTrace instanceof NoClassDefFoundError;
           Throwable cause = forStackTrace.getCause();
           while (cause != null) {
-            msg.add("Underlying Exception: " + cause + "; " + UtilPlume.stackTraceToString(cause));
+            msg.add("Underlying Exception: " + cause + "; " + UtilP.stackTraceToString(cause));
             printClasspath |= cause instanceof NoClassDefFoundError;
             cause = cause.getCause();
           }
@@ -3416,8 +3568,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       Field field = handler.getClass().getDeclaredField("val$delegateTo");
       field.setAccessible(true);
       Object o = field.get(handler);
-      if (o instanceof ProcessingEnvironment) {
-        return (ProcessingEnvironment) o;
+      if (o instanceof ProcessingEnvironment pe) {
+        return pe;
       }
       return null;
     } catch (NoSuchFieldException | IllegalAccessException e) {
@@ -3439,8 +3591,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       Field field = delegateClass.getDeclaredField("delegate");
       field.setAccessible(true);
       Object o = field.get(env);
-      if (o instanceof ProcessingEnvironment) {
-        return (ProcessingEnvironment) o;
+      if (o instanceof ProcessingEnvironment pe) {
+        return pe;
       }
       return null;
     } catch (NoSuchFieldException | IllegalAccessException e) {
