@@ -38,7 +38,7 @@ import org.checkerframework.javacutil.AnnotationUtils;
 import org.checkerframework.javacutil.BugInCF;
 import org.checkerframework.javacutil.ElementUtils;
 import org.checkerframework.javacutil.TypeKindUtils;
-import org.plumelib.util.CollectionsPlume;
+import org.plumelib.util.CollectionsP;
 import org.plumelib.util.DeepCopyable;
 
 /**
@@ -110,7 +110,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   // public AnnotatedTypeMirror clone() { ... }
 
   /**
-   * Creates an AnnotatedTypeMirror for the provided type. The result contains no annotations.
+   * Creates an empty AnnotatedTypeMirror for the provided type. The result contains no annotations.
    *
    * @param type the underlying type for the resulting AnnotatedTypeMirror
    * @param atypeFactory the type factory that will build the result
@@ -126,50 +126,33 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
 
     AnnotatedTypeMirror result;
     switch (type.getKind()) {
-      case ARRAY:
-        result = new AnnotatedArrayType((ArrayType) type, atypeFactory);
-        break;
-      case DECLARED:
-        result = new AnnotatedDeclaredType((DeclaredType) type, atypeFactory, isDeclaration);
-        break;
-      case ERROR:
-        throw new BugInCF(
-            "AnnotatedTypeMirror.createType: input is not compilable. Found error type: " + type);
-
-      case EXECUTABLE:
-        result = new AnnotatedExecutableType((ExecutableType) type, atypeFactory);
-        break;
-      case VOID:
-      case PACKAGE:
-      case NONE:
-        result = new AnnotatedNoType((NoType) type, atypeFactory);
-        break;
-      case NULL:
-        result = new AnnotatedNullType((NullType) type, atypeFactory);
-        break;
-      case TYPEVAR:
-        result = new AnnotatedTypeVariable((TypeVariable) type, atypeFactory, isDeclaration);
-        break;
-      case WILDCARD:
-        result = new AnnotatedWildcardType((WildcardType) type, atypeFactory);
-        break;
-      case INTERSECTION:
-        result = new AnnotatedIntersectionType((IntersectionType) type, atypeFactory);
-        break;
-      case UNION:
-        result = new AnnotatedUnionType((UnionType) type, atypeFactory);
-        break;
-      default:
+      case ARRAY -> result = new AnnotatedArrayType((ArrayType) type, atypeFactory);
+      case DECLARED ->
+          result = new AnnotatedDeclaredType((DeclaredType) type, atypeFactory, isDeclaration);
+      case ERROR ->
+          throw new BugInCF(
+              "AnnotatedTypeMirror.createType: input is not compilable. Found error type: " + type);
+      case EXECUTABLE -> result = new AnnotatedExecutableType((ExecutableType) type, atypeFactory);
+      case VOID, PACKAGE, NONE -> result = new AnnotatedNoType((NoType) type, atypeFactory);
+      case NULL -> result = new AnnotatedNullType((NullType) type, atypeFactory);
+      case TYPEVAR ->
+          result = new AnnotatedTypeVariable((TypeVariable) type, atypeFactory, isDeclaration);
+      case WILDCARD -> result = new AnnotatedWildcardType((WildcardType) type, atypeFactory);
+      case INTERSECTION ->
+          result = new AnnotatedIntersectionType((IntersectionType) type, atypeFactory);
+      case UNION -> result = new AnnotatedUnionType((UnionType) type, atypeFactory);
+      default -> {
         if (type.getKind().isPrimitive()) {
           result = new AnnotatedPrimitiveType((PrimitiveType) type, atypeFactory);
-          break;
+        } else {
+          throw new BugInCF(
+              "AnnotatedTypeMirror.createType: unidentified type "
+                  + type
+                  + " ("
+                  + type.getKind()
+                  + ")");
         }
-        throw new BugInCF(
-            "AnnotatedTypeMirror.createType: unidentified type "
-                + type
-                + " ("
-                + type.getKind()
-                + ")");
+      }
     }
     /*if (jctype.isAnnotated()) {
         result.addAnnotations(jctype.getAnnotationMirrors());
@@ -183,11 +166,11 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
       return true;
     }
 
-    if (!(o instanceof AnnotatedTypeMirror)) {
+    if (!(o instanceof AnnotatedTypeMirror atm)) {
       return false;
     }
 
-    return EQUALITY_COMPARER.visit(this, (AnnotatedTypeMirror) o, null);
+    return EQUALITY_COMPARER.visit(this, atm, null);
   }
 
   @Pure
@@ -256,8 +239,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Returns true if this type has a primary annotation in the same hierarchy as {@code annotation}.
    *
    * @param annotation the qualifier hierarchy to check for
-   * @return true iff this type has a primary annotation in the same hierarchy as {@code
-   *     annotation}.
+   * @return true iff this type has a primary annotation in the same hierarchy as {@code annotation}
    */
   public boolean hasPrimaryAnnotationInHierarchy(AnnotationMirror annotation) {
     return getPrimaryAnnotationInHierarchy(annotation) != null;
@@ -267,16 +249,16 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Returns the primary annotation on this type that is in the same hierarchy as {@code
    * annotation}. For {@link AnnotatedTypeVariable}s and {@link AnnotatedWildcardType}s, {@code
    * null} may be returned when the upper bound may have an annotation with that class, so {@link
-   * #getEffectiveAnnotationInHierarchy(AnnotationMirror)} should be called instead.
+   * #getAnnotationInHierarchy(AnnotationMirror)} should be called instead.
    *
    * @param annotation an annotation in the qualifier hierarchy to check for
-   * @return the annotation mirror whose class is named {@code annoNAme} or null
+   * @return the annotation in the same hierarchy as {@code annotation}, or null
    */
   public @Nullable AnnotationMirror getPrimaryAnnotationInHierarchy(AnnotationMirror annotation) {
     if (primaryAnnotations.isEmpty()) {
       return null;
     }
-    annotation = atypeFactory.canonicalAnnotation(annotation);
+    annotation = atypeFactory.canonicalAnnotation(annotation, underlyingType);
     if (!atypeFactory.isSupportedQualifier(annotation)) {
       // This can happen if the annotation is unrelated to this AnnotatedTypeMirror.
       return null;
@@ -302,12 +284,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * @param annotation an annotation in the qualifier hierarchy to check for
    * @return an annotation from the same hierarchy as {@code annotation} if present
    */
-  public @Nullable AnnotationMirror getEffectiveAnnotationInHierarchy(AnnotationMirror annotation) {
-    annotation = atypeFactory.canonicalAnnotation(annotation);
+  public @Nullable AnnotationMirror getAnnotationInHierarchy(AnnotationMirror annotation) {
+    annotation = atypeFactory.canonicalAnnotation(annotation, underlyingType);
     if (atypeFactory.isSupportedQualifier(annotation)) {
       QualifierHierarchy qualHierarchy = this.atypeFactory.getQualifierHierarchy();
       AnnotationMirror anno =
-          qualHierarchy.findAnnotationInSameHierarchy(getEffectiveAnnotations(), annotation);
+          qualHierarchy.findAnnotationInSameHierarchy(getAnnotations(), annotation);
       if (anno != null) {
         return anno;
       }
@@ -318,7 +300,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the primary annotations on this type. For {@link AnnotatedTypeVariable}s and {@link
    * AnnotatedWildcardType}s, the returned annotations may be empty or missing annotations in
-   * hierarchies, so {@link #getEffectiveAnnotations()} should be called instead.
+   * hierarchies, so {@link #getAnnotations()} should be called instead.
    *
    * <p>It does not include annotations in deep types (type arguments, array components, etc).
    *
@@ -349,7 +331,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the single primary annotations on this type. For {@link AnnotatedTypeVariable}s and
    * {@link AnnotatedWildcardType}s, the returned annotations may be empty or missing annotations in
-   * hierarchies, so {@link #getEffectiveAnnotation()} should be called instead.
+   * hierarchies, so {@link #getAnnotation()} should be called instead.
    *
    * <p>This method requires that there is only a single hierarchy. Therefore, it is equivalent to
    * {@link #getPrimaryAnnotationInHierarchy}.
@@ -377,9 +359,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    *
    * @return a set of the annotations on this
    */
-  // TODO: When the current, deprecated `getAnnotations()` (deprecation date 2023-06-15) is
-  // removed, rename all the "getEffectiveAnnotation...()" methods to just "getAnnotation...()".
-  public AnnotationMirrorSet getEffectiveAnnotations() {
+  public AnnotationMirrorSet getAnnotations() {
     AnnotationMirrorSet effectiveAnnotations = getErased().getPrimaryAnnotations();
     //        assert atypeFactory.qualHierarchy.getWidth() == effectiveAnnotations
     //                .size() : "Invalid number of effective annotations ("
@@ -395,18 +375,18 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * type is reached). If this is fully-annotated, this method will not return {@code null}
    *
    * <p>This method requires that there is only a single hierarchy. Therefore, it is equivalent to
-   * {@link #getEffectiveAnnotationInHierarchy(AnnotationMirror)}.
+   * {@link #getAnnotationInHierarchy(AnnotationMirror)}.
    *
-   * @return a set of the annotations on this
+   * @return the annotation on this type, or null if there is none
    */
-  public final AnnotationMirror getEffectiveAnnotation() {
-    AnnotationMirrorSet effectiveAnnotations = getEffectiveAnnotations();
+  public final AnnotationMirror getAnnotation() {
+    AnnotationMirrorSet effectiveAnnotations = getAnnotations();
     if (effectiveAnnotations.isEmpty()) {
       // This AnnotatedTypeMirror must be a type variable or wildcard.
       return null;
     }
     if (effectiveAnnotations.size() != 1) {
-      throw new BugInCF("Bad annotation size for getPrimaryAnnotation(): " + this);
+      throw new BugInCF("Bad annotation size for getAnnotation(): " + this);
     }
     return effectiveAnnotations.iterator().next();
   }
@@ -414,8 +394,8 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the primary annotation on this type whose class is {@code annoClass}. For {@link
    * AnnotatedTypeVariable}s and {@link AnnotatedWildcardType}s, {@code null} may be returned when
-   * the upper bound may have an annotation with that class, so {@link
-   * #getEffectiveAnnotation(Class)} should be called instead.
+   * the upper bound may have an annotation with that class, so {@link #getAnnotation(Class)} should
+   * be called instead.
    *
    * @param annoClass annotation class
    * @return the annotation mirror whose class is {@code annoClass} or null
@@ -432,8 +412,8 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the primary annotations on this type whose annotation class name {@code annoName}. For
    * {@link AnnotatedTypeVariable}s and {@link AnnotatedWildcardType}s, {@code null} may be returned
-   * when the upper bound may have an annotation with that class, so {@link
-   * #getEffectiveAnnotation(Class)} should be called instead.
+   * when the upper bound may have an annotation with that class, so {@link #getAnnotation(Class)}
+   * should be called instead.
    *
    * @param annoName annotation class name
    * @return the annotation mirror whose class is named {@code annoName} or null
@@ -520,8 +500,8 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * @param annoClass annotation class
    * @return the effective annotation with the same class as {@code annoClass}
    */
-  public @Nullable AnnotationMirror getEffectiveAnnotation(Class<? extends Annotation> annoClass) {
-    for (AnnotationMirror annoMirror : getEffectiveAnnotations()) {
+  public @Nullable AnnotationMirror getAnnotation(Class<? extends Annotation> annoClass) {
+    for (AnnotationMirror annoMirror : getAnnotations()) {
       if (atypeFactory.areSameByClass(annoMirror, annoClass)) {
         return annoMirror;
       }
@@ -532,17 +512,23 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * A version of {@link #hasPrimaryAnnotation(Class)} that considers annotations on the upper bound
    * of wildcards and type variables.
+   *
+   * @param a an annotation class
+   * @return true if this has an annotation of the given class
    */
-  public boolean hasEffectiveAnnotation(Class<? extends Annotation> a) {
-    return getEffectiveAnnotation(a) != null;
+  public boolean hasAnnotation(Class<? extends Annotation> a) {
+    return getAnnotation(a) != null;
   }
 
   /**
    * A version of {@link #hasPrimaryAnnotation(AnnotationMirror)} that considers annotations on the
    * upper bound of wildcards and type variables.
+   *
+   * @param a an annotation class
+   * @return true if this has an annotation that is the same as the given annotation
    */
-  public boolean hasEffectiveAnnotation(AnnotationMirror a) {
-    return AnnotationUtils.containsSame(getEffectiveAnnotations(), a);
+  public boolean hasAnnotation(AnnotationMirror a) {
+    return AnnotationUtils.containsSame(getAnnotations(), a);
   }
 
   /**
@@ -584,9 +570,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * A version of {@link #hasPrimaryAnnotationRelaxed(AnnotationMirror)} that considers annotations
    * on the upper bound of wildcards and type variables.
+   *
+   * @param a an annotation class
+   * @return true if this has an annotation that is the same as the given annotation
    */
-  public boolean hasEffectiveAnnotationRelaxed(AnnotationMirror a) {
-    return AnnotationUtils.containsSameByName(getEffectiveAnnotations(), a);
+  public boolean hasAnnotationRelaxed(AnnotationMirror a) {
+    return AnnotationUtils.containsSameByName(getAnnotations(), a);
   }
 
   /**
@@ -624,9 +613,11 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Adds the canonical version of {@code annotation} as a primary annotation of this type and, in
    * the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and {@link
    * AnnotatedIntersectionType}s, adds it to all bounds. (The canonical version is found via {@link
-   * AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of {@code annotation} is
-   * not a supported qualifier, then no annotation is added. If this type already has annotation in
-   * the same hierarchy as {@code annotation}, the behavior of this method is undefined.
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of {@code annotation} is not a supported qualifier, then no annotation is added. If
+   * this type already has annotation in the same hierarchy as {@code annotation}, the behavior of
+   * this method is undefined.
    *
    * @param annotation the annotation to add
    */
@@ -634,7 +625,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     if (annotation == null) {
       throw new BugInCF("AnnotatedTypeMirror.addAnnotation: null argument.");
     }
-    annotation = atypeFactory.canonicalAnnotation(annotation);
+    annotation = atypeFactory.canonicalAnnotation(annotation, underlyingType);
     if (atypeFactory.isSupportedQualifier(annotation)) {
       this.primaryAnnotations.add(annotation);
     }
@@ -655,10 +646,11 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Adds the canonical version of all {@code annotations} as primary annotations of this type and,
    * in the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and {@link
    * AnnotatedIntersectionType}s, adds them to all bounds. (The canonical version is found via
-   * {@link AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of an {@code
-   * annotation} is not a supported qualifier, then that annotation is not add added. If this type
-   * already has annotation in the same hierarchy as any of the {@code annotations}, the behavior of
-   * this method is undefined.
+   * {@link AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of an annotation is not a supported qualifier, then that annotation is not added. If
+   * this type already has annotation in the same hierarchy as any of the {@code annotations}, the
+   * behavior of this method is undefined.
    *
    * @param annotations the annotations to add
    */
@@ -675,8 +667,9 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * <p>The canonical version of the {@code annotations} are added as primary annotations of this
    * type and, in the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and
    * {@link AnnotatedIntersectionType}s, adds them to all bounds. (The canonical version is found
-   * via {@link AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of an
-   * annotation is not a supported qualifier, then that annotation is not add added.
+   * via {@link AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of an annotation is not a supported qualifier, then that annotation is not added.
    *
    * @param annotations the annotations to add
    */
@@ -693,8 +686,10 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * <p>The canonical version of the {@code annotation} is added as a primary annotation of this
    * type and (in the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and
    * {@link AnnotatedIntersectionType}s) added to all bounds. (The canonical version is found via
-   * {@link AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of an {@code
-   * annotation} is not a supported qualifier, then that annotation is not add added.
+   * {@link AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of an {@code annotation} is not a supported qualifier, then that annotation is not
+   * added.
    *
    * @param annotation the annotations to add
    */
@@ -793,7 +788,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Returns the erasure type of this type, according to JLS specifications.
    *
    * @see <a
-   *     href="https://docs.oracle.com/javase/specs/jls/se17/html/jls-4.html#jls-4.6">https://docs.oracle.com/javase/specs/jls/se17/html/jls-4.html#jls-4.6</a>
+   *     href="https://docs.oracle.com/javase/specs/jls/se25/html/jls-4.html#jls-4.6">https://docs.oracle.com/javase/specs/jls/se25/html/jls-4.html#jls-4.6</a>
    * @return the erasure of this AnnotatedTypeMirror, this is always a copy even if the erasure and
    *     the original type are equivalent
    */
@@ -1034,7 +1029,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
         }
         typeArgs = Collections.unmodifiableList(ts);
       } else {
-        List<AnnotatedTypeMirror> uses = CollectionsPlume.mapList(AnnotatedTypeMirror::asUse, ts);
+        List<AnnotatedTypeMirror> uses = CollectionsP.mapList(AnnotatedTypeMirror::asUse, ts);
         typeArgs = Collections.unmodifiableList(uses);
       }
     }
@@ -1060,7 +1055,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
           TypeMirror wildcard =
               BoundsInitializer.getUpperBoundAsWildcard(typeParameterVar, atypeFactory.types);
           AnnotatedWildcardType atmWild =
-              (AnnotatedWildcardType) AnnotatedTypeMirror.createType(wildcard, atypeFactory, false);
+              (AnnotatedWildcardType) createType(wildcard, atypeFactory, false);
           atmWild.setTypeArgOfRawType();
           BoundsInitializer.initializeBounds(atmWild);
           typeArgs.add(atmWild);
@@ -1076,14 +1071,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
       } else if (isDeclaration()) {
         for (TypeMirror javaTypeArg : t.getTypeArguments()) {
           AnnotatedTypeVariable tv =
-              (AnnotatedTypeVariable)
-                  AnnotatedTypeMirror.createType(javaTypeArg, atypeFactory, true);
+              (AnnotatedTypeVariable) createType(javaTypeArg, atypeFactory, true);
           typeArgs.add(tv);
         }
       } else {
         for (TypeMirror javaTypeArg : t.getTypeArguments()) {
-          AnnotatedTypeMirror typeArg =
-              AnnotatedTypeMirror.createType(javaTypeArg, atypeFactory, false);
+          AnnotatedTypeMirror typeArg = createType(javaTypeArg, atypeFactory, false);
           typeArgs.add(typeArg);
         }
       }
@@ -1145,12 +1138,11 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     public AnnotatedDeclaredType getErased() {
       AnnotatedDeclaredType erased =
           (AnnotatedDeclaredType)
-              AnnotatedTypeMirror.createType(
-                  atypeFactory.types.erasure(underlyingType), atypeFactory, false);
+              createType(atypeFactory.types.erasure(underlyingType), atypeFactory, false);
       erased.addAnnotations(this.getPrimaryAnnotations());
       AnnotatedDeclaredType erasedEnclosing = erased.getEnclosingType();
       AnnotatedDeclaredType thisEnclosing = this.getEnclosingType();
-      while (erasedEnclosing != null) {
+      while (erasedEnclosing != null && thisEnclosing != null) {
         erasedEnclosing.addAnnotations(thisEnclosing.getPrimaryAnnotations());
         erasedEnclosing = erasedEnclosing.getEnclosingType();
         thisEnclosing = thisEnclosing.getEnclosingType();
@@ -1201,7 +1193,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * This is a subclass of {@link AnnotatedDeclaredType} that adds annotations even if they are not
    * supported by the type system.
    */
-  private static class AnnotatedDeclaredTypeNoHierarchy extends AnnotatedDeclaredType {
+  private static final class AnnotatedDeclaredTypeNoHierarchy extends AnnotatedDeclaredType {
 
     /**
      * Constructor for this type. The result contains no annotations.
@@ -1220,7 +1212,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   }
 
   /** Represents a type of an executable. An executable is a method, constructor, or initializer. */
-  public static class AnnotatedExecutableType extends AnnotatedTypeMirror {
+  public static final class AnnotatedExecutableType extends AnnotatedTypeMirror {
 
     /** The element of the method. */
     /*package-private*/ @MonotonicNonNull ExecutableElement element;
@@ -1238,7 +1230,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     /** The parameter types; an unmodifiable list. */
     /*package-private*/ @MonotonicNonNull List<AnnotatedTypeMirror> paramTypes = null;
 
-    /** True if {@link paramTypes} has been computed. */
+    /** True if {@link #paramTypes} has been computed. */
     private boolean paramTypesComputed = false;
 
     /**
@@ -1247,25 +1239,25 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      */
     /*package-private*/ @Nullable AnnotatedDeclaredType receiverType;
 
-    /** True if {@link receiverType} has been computed. */
+    /** True if {@link #receiverType} has been computed. */
     private boolean receiverTypeComputed = false;
 
     /** The return type. */
     /*package-private*/ @MonotonicNonNull AnnotatedTypeMirror returnType;
 
-    /** True if {@link returnType} has been computed. */
+    /** True if {@link #returnType} has been computed. */
     private boolean returnTypeComputed = false;
 
     /** The thrown types; an unmodifiable list. */
     /*package-private*/ @MonotonicNonNull List<AnnotatedTypeMirror> thrownTypes;
 
-    /** True if {@link thrownTypes} has been computed. */
+    /** True if {@link #thrownTypes} has been computed. */
     private boolean thrownTypesComputed = false;
 
     /** The type variables; an unmodifiable list. */
     /*package-private*/ @MonotonicNonNull List<AnnotatedTypeVariable> typeVarTypes;
 
-    /** True if {@link typeVarTypes} has been computed. */
+    /** True if {@link #typeVarTypes} has been computed. */
     private boolean typeVarTypesComputed = false;
 
     /**
@@ -1293,10 +1285,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      *
      * @deprecated add to the appropriate component
      */
-    @Deprecated // not for removal
+    @Deprecated(forRemoval = false) // deprecated to catch some calls at compile time
     @Override
     public void addAnnotation(AnnotationMirror annotation) {
-      assert false : "AnnotatedExecutableType.addAnnotation should never be called";
+      throw new BugInCF(
+          "AnnotatedExecutableType.addAnnotation should never be called. this=%s, annotation=%s",
+          this, annotation);
     }
 
     /**
@@ -1305,10 +1299,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @param params the parameter types, excluding the receiver
      */
     /*package-private*/ void setParameterTypes(List<? extends AnnotatedTypeMirror> params) {
-      paramTypes =
-          params.isEmpty()
-              ? Collections.emptyList()
-              : Collections.unmodifiableList(new ArrayList<>(params));
+      paramTypes = params.isEmpty() ? Collections.emptyList() : List.copyOf(params);
       paramTypesComputed = true;
     }
 
@@ -1431,10 +1422,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @param thrownTypes the thrown types
      */
     /*package-private*/ void setThrownTypes(List<? extends AnnotatedTypeMirror> thrownTypes) {
-      this.thrownTypes =
-          thrownTypes.isEmpty()
-              ? Collections.emptyList()
-              : Collections.unmodifiableList(new ArrayList<>(thrownTypes));
+      this.thrownTypes = thrownTypes.isEmpty() ? Collections.emptyList() : List.copyOf(thrownTypes);
       thrownTypesComputed = true;
     }
 
@@ -1464,10 +1452,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @param types the type variables of this executable type
      */
     /*package-private*/ void setTypeVariables(List<AnnotatedTypeVariable> types) {
-      typeVarTypes =
-          types.isEmpty()
-              ? Collections.emptyList()
-              : Collections.unmodifiableList(new ArrayList<>(types));
+      typeVarTypes = types.isEmpty() ? Collections.emptyList() : List.copyOf(types);
       typeVarTypesComputed = true;
     }
 
@@ -1564,7 +1549,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @return erased annotated type mirrors
      */
     private List<AnnotatedTypeMirror> erasureList(Iterable<? extends AnnotatedTypeMirror> lst) {
-      return CollectionsPlume.mapList(AnnotatedTypeMirror::getErased, lst);
+      return CollectionsP.mapList(AnnotatedTypeMirror::getErased, lst);
     }
   }
 
@@ -1572,8 +1557,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Represents Array types in java. A multidimensional array type is represented as an array type
    * whose component type is also an array type.
    */
-  public static class AnnotatedArrayType extends AnnotatedTypeMirror {
+  public static final class AnnotatedArrayType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedArrayType.
+     *
+     * @param type the underlying array type
+     * @param factory the annotated type factory
+     */
     private AnnotatedArrayType(ArrayType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -1673,13 +1664,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * capture conversion of a wildcard type argument (see chapter 5 of The Java Language
    * Specification, Third Edition).
    */
-  public static class AnnotatedTypeVariable extends AnnotatedTypeMirror {
-
-    private AnnotatedTypeVariable(
-        TypeVariable type, AnnotatedTypeFactory atypeFactory, boolean declaration) {
-      super(type, atypeFactory);
-      this.declaration = declaration;
-    }
+  public static final class AnnotatedTypeVariable extends AnnotatedTypeMirror {
 
     /** The lower bound of the type variable. */
     private AnnotatedTypeMirror lowerBound;
@@ -1687,7 +1672,21 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     /** The upper bound of the type variable. */
     private AnnotatedTypeMirror upperBound;
 
+    /** True if this is a declaration, false if this is a use. */
     private boolean declaration;
+
+    /**
+     * Creates a new AnnotatedTypeVariable.
+     *
+     * @param type the underlying type variable
+     * @param atypeFactory the annotated type factory
+     * @param declaration true if representing a declaration, false if representing a use
+     */
+    private AnnotatedTypeVariable(
+        TypeVariable type, AnnotatedTypeFactory atypeFactory, boolean declaration) {
+      super(type, atypeFactory);
+      this.declaration = declaration;
+    }
 
     @Override
     public boolean isDeclaration() {
@@ -1742,9 +1741,9 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     /**
      * Set the lower bound of this variable type.
      *
-     * <p>Returns the lower bound of this type variable. While a type parameter cannot include an
-     * explicit lower bound declaration, capture conversion can produce a type variable with a
-     * non-trivial lower bound. Type variables otherwise have a lower bound of NullType.
+     * <p>While a type parameter cannot include an explicit lower bound declaration, capture
+     * conversion can produce a type variable with a non-trivial lower bound. Type variables
+     * otherwise have a lower bound of NullType.
      *
      * @param type the lower bound type
      */
@@ -1909,8 +1908,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    *       superclass of java.lang.Object.
    * </ul>
    */
-  public static class AnnotatedNoType extends AnnotatedTypeMirror {
+  public static final class AnnotatedNoType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedNoType
+     *
+     * @param type the underlying {@code NoType}
+     * @param factory the annotated type factory
+     */
     private AnnotatedNoType(NoType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -1955,8 +1960,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   }
 
   /** Represents the null type. This is the type of the expression {@code null}. */
-  public static class AnnotatedNullType extends AnnotatedTypeMirror {
+  public static final class AnnotatedNullType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedNullType.
+     *
+     * @param type the underlying {@code NullType}
+     * @param factory the annotated type factory
+     */
     private AnnotatedNullType(NullType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -2000,8 +2011,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Represents a primitive type. These include {@code boolean}, {@code byte}, {@code short}, {@code
    * int}, {@code long}, {@code char}, {@code float}, and {@code double}.
    */
-  public static class AnnotatedPrimitiveType extends AnnotatedTypeMirror {
+  public static final class AnnotatedPrimitiveType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedPrimitiveType.
+     *
+     * @param type the underlying primitive type
+     * @param factory the annotated type factory
+     */
     private AnnotatedPrimitiveType(PrimitiveType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -2050,7 +2067,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * <p>A wildcard may have its upper bound explicitly set by an extends clause, its lower bound
    * explicitly set by a super clause, or neither (but not both).
    */
-  public static class AnnotatedWildcardType extends AnnotatedTypeMirror {
+  public static final class AnnotatedWildcardType extends AnnotatedTypeMirror {
     /** Lower ({@code super}) bound. */
     private AnnotatedTypeMirror superBound;
 
@@ -2250,14 +2267,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    *
    * <p>For example: {@code MyObject & Serializable & Comparable<MyObject>}
    */
-  public static class AnnotatedIntersectionType extends AnnotatedTypeMirror {
+  public static final class AnnotatedIntersectionType extends AnnotatedTypeMirror {
 
     /**
      * A list of the bounds of this which are also its direct super types.
      *
      * <p>Is set by {@link #shallowCopy}.
      */
-    protected List<AnnotatedTypeMirror> bounds;
+    /*package-protected*/ List<AnnotatedTypeMirror> bounds;
 
     /**
      * Creates an {@code AnnotatedIntersectionType} with the underlying type {@code type}. The
@@ -2361,8 +2378,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
       if (bounds == null) {
         List<? extends TypeMirror> ubounds = ((IntersectionType) underlyingType).getBounds();
         List<AnnotatedTypeMirror> res =
-            CollectionsPlume.mapList(
-                (TypeMirror bnd) -> createType(bnd, atypeFactory, false), ubounds);
+            CollectionsP.mapList((TypeMirror bnd) -> createType(bnd, atypeFactory, false), ubounds);
         bounds = Collections.unmodifiableList(res);
         fixupBoundAnnotations();
       }
@@ -2399,9 +2415,10 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     }
   }
 
+  /** Represents a union type. */
   // TODO: Ensure union types are handled everywhere.
   // TODO: Should field "annotations" contain anything?
-  public static class AnnotatedUnionType extends AnnotatedTypeMirror {
+  public static final class AnnotatedUnionType extends AnnotatedTypeMirror {
 
     /**
      * Creates a new AnnotatedUnionType.
@@ -2448,7 +2465,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      *
      * <p>Is set by {@link #getAlternatives} and {@link #shallowCopy}.
      */
-    protected @MonotonicNonNull List<AnnotatedDeclaredType> alternatives;
+    /*package-protected*/ @MonotonicNonNull List<AnnotatedDeclaredType> alternatives;
 
     /**
      * Returns the types that are unioned to form this AnnotatedUnionType.
@@ -2459,7 +2476,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
       if (alternatives == null) {
         List<? extends TypeMirror> ualts = ((UnionType) underlyingType).getAlternatives();
         List<AnnotatedDeclaredType> res =
-            CollectionsPlume.mapList(
+            CollectionsP.mapList(
                 (TypeMirror alt) -> (AnnotatedDeclaredType) createType(alt, atypeFactory, false),
                 ualts);
         alternatives = Collections.unmodifiableList(res);
